tests/paczka1/fuzzy1/35721549.err
Error in line 18: GUEbwDDB S131 30,8
Error in line 24: S115 S131 25,0
Error in line 20: GUEbwDDB S623 76,8
